--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,8 +19,22 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="/api/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Cadastrar Avaliação</a>
             <a class="nav-item nav-link" href="/api/livros/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Cadastrar livro</a>
+            <a class="nav-item nav-link" href="/api/consultar" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
         </div>
     </div>
 </nav>
 </body>
+<div class="container" style="font-family: 'rolner'; text-align: justify">
+    <!-- Div à esquerda com texto -->
+    <div class="content-left" style="width: 400px; height: 200px">
+        <p style="font-family: 'Stora'; color: #EE5E5B;">BookCASE<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis fermentum at magna sit amet efficitur. Aenean vehicula ex mi. Aenean nibh risus, condimentum in lorem sed, suscipit dapibus metus. Maecenas ac sapien ut ligula interdum ultricies pharetra a ipsum. Sed diam libero, luctus eu sagittis a, consectetur quis tortor. Cras id neque non turpis viverra consequat vitae euismod purus. Donec enim velit, consectetur vel blandit non, condimentum in tellus. Sed eros arcu, rhoncus vel iaculis fermentum, tincidunt pharetra nisl. Nulla maximus laoreet massa ac malesuada. Nullam venenatis lectus a varius facilisis. In dolor erat, pharetra dapibus ullamcorper a, auctor ac arcu. Etiam a libero dictum, tempus odio non, sagittis felis.
+    </div>
+
+    <!-- Div à direita com a imagem -->
+    <div class="content-right">
+        <img src="/image/book2.png" alt="Descrição da imagem" style="width: 500px; height: 500px">
+    </div>
+</div>
+
+
 </html>
