--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -4,18 +4,15 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'rolner';
 }
 
-body {
-    font-family: 'PT Sans', sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+body{
+    background: #B1BFA8;
 }
 
 .container {
+    margin-top:50px;
     display: flex;
     width: 80%;
     max-width: 1200px;
@@ -30,6 +27,11 @@ body {
     flex: 1;
     border-right: 1px solid #ddd;
 }
+
+h1{
+    font-family: 'Stora'
+}
+
 
 .form-container h2 {
     margin-bottom: 20px;
@@ -142,7 +144,7 @@ body {
     margin-left: -119px;
 }
 .button-link {
-    background: red;
+    background: #ee5e5b;
     margin-left: -51px;
     height: 40px; /* Aumenta a altura do botão */
     width: 150px; /* Aumenta a largura do botão */
@@ -158,3 +160,18 @@ body {
     padding: 0 15px;    /* Padding interno adicional, se necessário */
 }
 
+@font-face {
+    font-family: 'Magic Retro';
+    src: url('/fonts/magic/Magic_Retro.ttf') format('truetype');
+}
+
+/* Para a fonte Stora Light */
+@font-face {
+    font-family: 'Stora';
+    src: url('/fonts/stora/Stora.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'rolner';
+    src: url('/fonts/rolner/ROLNER.otf') format('opentype');
+}
