--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Cadastrar Avaliação</title>
     <link rel="stylesheet" href="/styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         function buscarLivro() {
@@ -63,11 +65,27 @@
         }
     </script>
 </head>
-<body>
+<body style="background-color: #f3fcee">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F9E1DD;">
+    <a class="navbar-brand navbar-brand-custom" href="/api/home" style="font-family: 'Stora'; color: white;  letter-spacing: 3px;  text-shadow: -1px -1px 0 #ee5e5b,
+        2px -2px 0 #ee5e5b,
+        -2px 2px 0 #ee5e5b,
+        2px 2px 0 #ee5e5b;">BookCASE</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/api/livros/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Cadastrar livro</a>
+        </div>
+    </div>
+</nav>
+<div class="container mt-4">
+    <h1 class="mb-4" style="font-family: 'Stora'; color:  #3D5C30; text-align: center;padding: 10px ">Cadastrar Avaliação</h1></div>
 <div class="container">
     <!-- Formulário de Cadastro -->
     <div class="form-container">
-        <h2>Cadastro de Avaliações</h2>
+
         <form id="formLivro">
             <div class="form-group">
                 <label for="nome">Nome do Livro:</label>
@@ -97,8 +115,9 @@
                 <label for="comentario">Comentário:</label>
                 <textarea id="comentario" name="comentario"></textarea>
             </div>
-            <button type="button" onclick="atualizarDetalhes()">Salvar</button>
-            <button type="reset" onclick="atualizarDetalhes()">Limpar</button>
+            <button type="button" class="btn btn-success" onclick="atualizarDetalhes()">Salvar</button>
+            <button type="reset" class="btn btn-danger" onclick="atualizarDetalhes()">Limpar</button>
+
         </form>
     </div>
 
