--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F9E1DD;">
-    <a class="navbar-brand navbar-brand-custom" href="/" style="font-family: 'Stora'; color: white;  letter-spacing: 3px;  text-shadow: -1px -1px 0 #ee5e5b,
+    <a class="navbar-brand navbar-brand-custom" href="/api/home" style="font-family: 'Stora'; color: white;  letter-spacing: 3px;  text-shadow: -1px -1px 0 #ee5e5b,
         2px -2px 0 #ee5e5b,
         -2px 2px 0 #ee5e5b,
         2px 2px 0 #ee5e5b;">BookCASE</a>
@@ -19,7 +19,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="/api/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Cadastrar Avaliação</a>
             <a class="nav-item nav-link" href="/api/livros/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Cadastrar livro</a>
-            <a class="nav-item nav-link" href="/api/consultar" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
+            <a class="nav-item nav-link" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
         </div>
     </div>
 </nav>
@@ -27,8 +27,13 @@
 <div class="container" style="font-family: 'rolner'; text-align: justify">
     <!-- Div à esquerda com texto -->
     <div class="content-left" style="width: 400px; height: 200px">
-        <p style="font-family: 'Stora'; color: #EE5E5B;">BookCASE<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis fermentum at magna sit amet efficitur. Aenean vehicula ex mi. Aenean nibh risus, condimentum in lorem sed, suscipit dapibus metus. Maecenas ac sapien ut ligula interdum ultricies pharetra a ipsum. Sed diam libero, luctus eu sagittis a, consectetur quis tortor. Cras id neque non turpis viverra consequat vitae euismod purus. Donec enim velit, consectetur vel blandit non, condimentum in tellus. Sed eros arcu, rhoncus vel iaculis fermentum, tincidunt pharetra nisl. Nulla maximus laoreet massa ac malesuada. Nullam venenatis lectus a varius facilisis. In dolor erat, pharetra dapibus ullamcorper a, auctor ac arcu. Etiam a libero dictum, tempus odio non, sagittis felis.
-    </div>
+        <p style="font-family: 'Stora'; color: #EE5E5B;">BookCASE<p>Seja bem-vindo à Bookcase, sua biblioteca virtual!<br><br>
+
+        Aqui, você terá a oportunidade de explorar o mundo literário como nunca antes. Cadastre seus livros favoritos, tanto os que você já leu quanto aqueles que ainda estão na sua lista de desejos. Avalie e compartilhe suas impressões sobre as obras que marcaram sua trajetória de leitura. Nossa plataforma permite que você organize sua biblioteca pessoal, descubra novas leituras e compartilhe suas avaliações com outros amantes da leitura. A Bookcase está aqui para tornar sua experiência de leitura ainda mais enriquecedora.
+
+        Explore, avalie e compartilhe suas leituras!
+
+        <br>E lembre-se, nunca julgue um livro pela capa</div>
 
     <!-- Div à direita com a imagem -->
     <div class="content-right">
