--- a/src/main/resources/templates/livro.html
+++ b/src/main/resources/templates/livro.html
@@ -14,6 +14,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="/api/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Cadastrar Avaliação</a>
+            <a class="nav-item nav-link" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
         </div>
     </div>
 </nav>
