--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -113,7 +113,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="/api/livros/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Cadastrar livro</a>
-            <a class="nav-item nav-link" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
+            <a class="nav-item nav-link" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Avaliações</a>
+            <a class="nav-item nav-link" href="/api/consultar" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
         </div>
     </div>
 </nav>
@@ -161,7 +162,7 @@
     <!-- Card do Livro -->
     <div class="card">
         <div class="imgBox">
-            <img id="livroImagem" src="/image/Literature-pana.jpg" alt="Imagem do Livro">
+            <img id="livroImagem" src="/image/Ebook-pana.jpg" alt="Imagem do Livro">
         </div>
         <div class="details">
             <h2>ANOTAÇÕES</h2>
