--- a/src/main/resources/static/consultalivro.css
+++ b/src/main/resources/static/consultalivro.css
@@ -16,7 +16,7 @@
 
 .avaliacao-card {
     width: 250px; /* Define a largura dos cards */
-    margin-bottom: 20px;
+    margin-top: 50px;
     margin-left: 50px;
     border: 1px solid #ddd;
     border-radius: 20px;
@@ -35,7 +35,7 @@
 
 .avaliacao-card img {
     width: 100%;
-    height: 150px; /* Ajusta a altura da imagem */
+    height: 250px; /* Ajusta a altura da imagem */
     object-fit: cover;
 }
 
