--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -88,7 +88,7 @@ h1{
     left: 0;
     width: 100%;
     height: 5px;
-    background-color: #46070d;
+    background-color: #273238;
     transform-origin: bottom;
     transform: skewX(-45deg);
 }
@@ -100,7 +100,7 @@ h1{
     right: -5px;
     width: 5px;
     height: 100%;
-    background-color: #8f0b18;
+    background-color: #273238;
     transform-origin: left;
     transform: skewY(-45deg);
 }
