--- a/src/main/resources/templates/livro.html
+++ b/src/main/resources/templates/livro.html
@@ -7,16 +7,34 @@
 </head>
 <body style="background-color: #f3fcee">
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F9E1DD;">
-    <a class="navbar-brand navbar-brand-custom" href="/api/home" style="font-family: 'Stora'; color: white;  letter-spacing: 3px;  text-shadow: -1px -1px 0 #ee5e5b, 2px -2px 0 #ee5e5b, -2px 2px 0 #ee5e5b, 2px 2px 0 #ee5e5b;">BookCASE</a>
+    <a class="navbar-brand navbar-brand-custom" href="/api/home" style="font-family: 'Stora'; color: white;  letter-spacing: 3px;  text-shadow: -1px -1px 0 #ee5e5b,
+        2px -2px 0 #ee5e5b,
+        -2px 2px 0 #ee5e5b,
+        2px 2px 0 #ee5e5b;">BookCASE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/api/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Cadastrar Avaliação</a>
             <a class="nav-item nav-link" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Avaliações</a>
+            <a class="nav-item nav-link" href="/api/consultar" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-family: 'rolner'; color: #3D5C30">
+                    Cadastrar
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="font-family: 'rolner'; color: #3D5C30">
+                    <a class="dropdown-item" href="/api/livros/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Livro</a>
+                    <a class="dropdown-item" href="/api/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Avaliação</a>
+                    <a class="dropdown-item" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Autores</a>
+                </div>
+            </li>
         </div>
     </div>
+    <form class="form-inline my-2 my-lg-0">
+        <a href="/login" class="btn btn-outline-light" style="border-color: white; margin-right: 10px; background-color: #f2514f; border-radius: 25px; width: 110px; letter-spacing: 2px; color: white; font-family: 'rolner';">Login</a>
+
+        <a href="/cadastro" class="btn btn-outline-danger" style="border-color: #f2514f; color: white; border-radius: 25px; letter-spacing: 3px; font-family: 'rolner';">Cadastrar</a>
+    </form>
 </nav>
 
 <div class="container mt-4">
