--- a/src/main/resources/templates/avaliacao.html
+++ b/src/main/resources/templates/avaliacao.html
@@ -31,7 +31,7 @@
             </li>
         </div>
     </div>
-    <form class="form-inline my-2 my-lg-0" action="/buscarPorNome" method="get">
+    <form class="form-inline my-2 my-lg-0" action="/api/buscarporlivro" method="get">
         <input class="form-control mr-sm-2" type="search" name="nome" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" style="background-color: #3D5C30; color: white" type="submit">Search</button>
     </form>
