--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,7 +36,7 @@
     <form class="form-inline my-2 my-lg-0">
         <a href="/login" class="btn btn-outline-light" style="border-color: white; margin-right: 10px; background-color: #f2514f; border-radius: 25px; width: 110px; letter-spacing: 2px; color: white; font-family: 'rolner';">Login</a>
 
-        <a href="/cadastro" class="btn btn-outline-danger" style="border-color: #f2514f; color: white; border-radius: 25px; letter-spacing: 3px; font-family: 'rolner';">Cadastrar</a>
+        <a href="/api/usuario/cadastrar" class="btn btn-outline-danger" style="border-color: #f2514f; color: white; border-radius: 25px; letter-spacing: 3px; font-family: 'rolner';">Cadastrar</a>
     </form>
 </nav>
 </body>
